adds task queue for save-new-apps

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
 cron:
 - description: "latest apps and games"
-  url: /api/v1/save-new-apps
+  url: /api/v1/task-queue-save-new-apps
   schedule: every 6 hours
